# mongotic

./: .env.example  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy-docs.yml
.plank/epics/: EPIC-001.md  EPIC-002.md  EPIC-003.md
.plank/issues/: MGT-001.md  MGT-002.md  MGT-003.md  MGT-004.md  MGT-005.md  MGT-006.md  MGT-007.md  MGT-008.md  MGT-009.md  MGT-010.md  MGT-011.md  MGT-012.md  MGT-013.md  MGT-014.md  MGT-015.md  MGT-016.md  MGT-017.md  MGT-018.md  MGT-019.md  MGT-020.md  MGT-021.md  MGT-022.md  MGT-023.md  MGT-024.md  MGT-025.md  MGT-026.md  MGT-027.md  MGT-028.md  MGT-029.md  MGT-030.md  MGT-031.md  MGT-032.md
docs/: async.md  cosmos-compatibility.md  design.md  index.md  indexes.md  logo.md  migration-v0.2-to-v0.3.md  migration-v0.4-to-v0.5.md  migration-v0.5-to-v0.6.md  querying.md  quickstart.md  session.md
mongotic/: __init__.py  exceptions.py  model.py  orm.py  query.py  result.py
mongotic/asyncio/: __init__.py  engine.py  orm.py
tests/: conftest.py  helpers.py  test_async_session_merge.py  test_async_session_state.py  test_distinct.py  test_env.py  test_execute_result_migration.py  test_indexes.py  test_logical_operators.py  test_model_filed_operators.py  test_orm.py  test_session_refresh.py  test_session_state.py  test_v06_mapped.py  test_version.py
tests/model/: test_field_operators.py
tests/orm/: test_insert_statement.py  test_insert_statement_async.py  test_orm.py  test_orm_async.py  test_session_lifecycle.py  test_session_lifecycle_async.py  test_session_merge.py  test_session_merge_async.py  test_session_refresh.py  test_session_refresh_async.py  test_session_state.py  test_session_state_async.py
tests/query/: test_between.py  test_distinct.py  test_indexes.py  test_indexes_async.py  test_logical_operators.py  test_logical_operators_async.py  test_null_operators.py  test_projection.py  test_projection_async.py  test_string_operators.py
tests/result/: test_execute_result.py  test_execute_result_async.py  test_execute_result_migration.py  test_scalar_result_iter.py  test_scalar_result_iter_async.py
