[tool.poetry]
name = "mongotic"
version = "0.3.0"
description = "The concept of MongoDB, SQLAlchemy and Pydantic."
authors = ["Allen Chou <f1470891079@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["mongodb", "sqlalchemy", "pydantic"]
homepage = "https://github.com/allen2c/mongotic"
repository = "https://github.com/allen2c/mongotic"
documentation = "https://github.com/allen2c/mongotic"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.15.0"
pydantic = "^2"
pymongo = "^4"
pyassorted = "^0.7.5"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
mkdocs-material = "*"
pytest = "*"
pytest-dotenv = "*"

[tool.poetry.requires-plugins]
poetry-plugin-export = "*"

[tool.pytest.ini_options]
env_files = ".env"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
