[project]
name = "mongotic"
version = "0.6.0"
description = "The concept of MongoDB, SQLAlchemy and Pydantic."
authors = [{ name = "Allen Chou", email = "f1470891079@gmail.com" }]
license = "MIT"
readme = "README.md"
keywords = ["mongodb", "sqlalchemy", "pydantic"]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2,<3",
    "pymongo>=4.10,<5",
]

[project.urls]
Homepage = "https://github.com/allen2c/mongotic"
Repository = "https://github.com/allen2c/mongotic"
Documentation = "https://allen2c.github.io/mongotic/"

[dependency-groups]
dev = [
    "black",
    "isort",
    "mkdocs-material",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-dotenv",
    "ruff",
]

[tool.poetry.requires-plugins]
poetry-plugin-export = "*"

[tool.pytest.ini_options]
env_files = ".env"
asyncio_mode = "auto"
addopts = "--cov=mongotic --cov-report=term-missing"
filterwarnings = [
    "once:You appear to be connected to a CosmosDB:UserWarning",
]

[tool.coverage.run]
source = ["mongotic"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.black]
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["E501"]

[tool.pyright]
include = ["mongotic", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportArgumentType = "error"
reportGeneralTypeIssues = "error"
reportReturnType = "error"
# Known limitation: Pydantic-declared fields are statically typed as their value type
# (e.g. `str`), so `Model.field.in_(...)` / `.like(...)` / `.between(...)` warn. The
# `.where(*conditions: bool | FilterType)` signature loosening accepts the common
# `Model.field == "x"` pattern; full IDE support for the rest is planned for v0.6.0
# via a Mapped[T] descriptor.

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
