[project]
name = "mongotic"
version = "0.6.0"
description = "The concept of MongoDB, SQLAlchemy and Pydantic."
authors = [{ name = "Allen Chou", email = "f1470891079@gmail.com" }]
license = "MIT"
readme = "README.md"
keywords = ["mongodb", "sqlalchemy", "pydantic"]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2,<3",
    "pymongo>=4.10,<5",
]

[project.urls]
Homepage = "https://github.com/allen2c/mongotic"
Repository = "https://github.com/allen2c/mongotic"
Documentation = "https://allen2c.github.io/mongotic/"

[dependency-groups]
dev = [
    "black",
    "isort",
    "mkdocs-material",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-dotenv",
    "ruff",
]

[tool.poetry.requires-plugins]
poetry-plugin-export = "*"

[tool.pytest.ini_options]
env_files = ".env"
asyncio_mode = "auto"
addopts = "--cov=mongotic --cov-report=term-missing"
filterwarnings = [
    "once:You appear to be connected to a CosmosDB:UserWarning",
]

[tool.coverage.run]
source = ["mongotic"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.black]
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["E501"]

[tool.pyright]
include = ["mongotic", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportArgumentType = "error"
reportGeneralTypeIssues = "error"
reportReturnType = "error"
reportAttributeAccessIssue = "error"
# v0.6.0: the Mapped[T] descriptor + mapped_field() resolves the Pydantic-field
# typing limitations from earlier versions. All query-operator patterns (.in_,
# .like, .between, ==, >, etc.) are statically typed end to end. Legacy Field()
# declarations still work at runtime but pyright cannot infer Mapped[T] from a
# plain value-type annotation — those call sites stay warning-prone until the
# author migrates to the new declaration style. The compat shim is planned for
# removal in v0.7.0.

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
